# stt_test

./: .env.example  .gitignore  pyproject.toml
app/: config.py  db.py  main.py  models.py  pipeline.py
app/adapters/: __init__.py  aws.py  base.py  clova.py  google.py  sensevoice.py  vito.py  whisper.py  whisper_base.py  whisper_small.py  whisper_tiny.py  whisper_turbo.py
app/analysis/: accuracy.py  filler.py  intonation.py  silence.py  speech_rate.py  stutter.py
app/routers/: evaluate.py  report.py
docs/: STT_API_선정_프로젝트_설계서.md  결과표.md  결과표_생성본.md  포팅_메뉴얼.md
scripts/: build_report.py  run_benchmark.py
