[project]
name = "stt-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.40",
    "fastapi>=0.139.0",
    "google-cloud-speech>=2.40.0",
    "google-cloud-storage>=3.12.0",
    "httpx>=0.28.1",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "praat-parselmouth>=0.4.7",
    "pydantic-settings>=2.14.2",
    "pydub>=0.25.1",
    "python-multipart>=0.0.32",
    "soundfile>=0.14.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.1",
    "webrtcvad-wheels>=2.0.14",
]
