[project]
name = "stt-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "funasr>=1.3.14",
    "httpx>=0.28.1",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "openai-whisper>=20240930",
    "praat-parselmouth>=0.4.7",
    "pydantic-settings>=2.14.2",
    "pydub>=0.25.1",
    "python-multipart>=0.0.32",
    "soundfile>=0.14.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "uvicorn[standard]>=0.50.1",
    "webrtcvad-wheels>=2.0.14",
]

# PyPI의 Windows용 torch 휠은 CPU 전용이라 CUDA 빌드를 별도 인덱스에서 받는다.
# cu130 = CUDA 13.0 (드라이버 610.62 / CUDA UMD 13.3 하위 호환)
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
